Adding the add Project feat

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
     <!-- Custom styles for this template-->
     <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
 
+    <link
+      rel="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
+
   </head>
   <body>
     <app-root></app-root>
@@ -35,5 +41,9 @@
     <!-- Page level custom scripts -->
     <script src="./assets/js/demo/chart-area-demo.js"></script>
     <script src="./assets/js/demo/chart-pie-demo.js"></script>
+    <script src="./assets/js/myjs.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <!-- <script src="./assets/css/app.js"></script> -->
   </body>
 </html>
