Adding Type Writer effect

--- a/src/index.html
+++ b/src/index.html
@@ -45,5 +45,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <!-- <script src="./assets/css/app.js"></script> -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> -->
   </body>
 </html>
